some formatting changes and addition of es6fiddle

--- a/UnderstandingClassesInEcmaScript6.html
+++ b/UnderstandingClassesInEcmaScript6.html
@@ -12,7 +12,7 @@
     <br>
     <div class="text-center">
         <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/8b3d6c98-c946-4222-8688-94b8f9b96cf5_original.jpg"
-        alt="never assume anything lol" style="border:0"  width="400" text-align="center" />
+        alt="blueprint for classes image rocket" style="border:0"  width="400" text-align="center" />
     </div>
     <br>
 
@@ -40,7 +40,7 @@
     <br>
     <div class="text-center">
         <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/c026b9fe-e6ca-490d-ac57-d92c1737c419_original.jpg"
-        alt="never assume anything lol" style="border:0"  width="600" text-align="center" />
+        alt="never assume anything lol" style="border:0"  width="400" text-align="center" />
     </div>
     <br>
     <p>It's not entirely your fault if you were mislead by the <code>new</code> and <code>instanceof</code> keywords, especially if you heard <strong>"JavaScript is getting classes in ES6!"</strong>.  These keywords, which are very similar to other language keywords referring to class instantiation, have a tendency to confuse novice JavaScript developers.</p>
@@ -61,7 +61,7 @@
     <br>
     <div class="text-center">
         <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/fb913409-8f2b-4f32-849e-9be7013728d1_original.png"
-        alt="ecmascript 6 logo" style="border:0"  width="600" text-align="center" />
+        alt="ecmascript 6 logo" style="border:0"  width="700" height="100" text-align="center" />
     </div>
     <br>
     <p>As we initially started to talk about ES6 classes, the <code>class</code> keyword is syntactic sugar over the <code>[[Prototype]]</code> delegation that's been in existence in JavaScript for ages.</p>
@@ -200,6 +200,12 @@
         <li><a href="https://github.com/google/traceur-compiler/wiki/Getting-Started">Babel</a></li>
     </ul>
 </div>
+<br>
+<div>
+    <h4>What to ES6 Fiddle?</h4>
+    <p>A great resource to try and learn more of the ES6 syntax is <a href="http://www.es6fiddle.net/">es6fiddle.net</a>.  Check them out and start fiddling!</p>
+</div>
+
 <div>
     <p>That's it for now.  Happy coding!</p>
 </div>
