a few formatting changes

--- a/UnderstandingClassesInEcmaScript6.html
+++ b/UnderstandingClassesInEcmaScript6.html
@@ -1,7 +1,8 @@
 
 <br />
-<p>By now you may have heard the news, EcmaScript(ES) 6 2015 is finalized and JavaScript is going to be propelled into future, satisfying the needs of non-JavaScript developers to easily transition to a language that didn't have <em>"classes"</em>.  Well, I'm not here to burst your bubble, but that's not happening.  What <em>IS</em> happening, is that we are getting nothing more than <strong>syntactic sugar over JavaScript prototypal inheritance.</strong></p>
-<p>Just to be 100% clear, "class oriented"(<small>Java, C#, etc</small>) programming involves object creation through constructors.  It is best to think of traditional instantiation as <em>class instantiation</em> which contrasts JavaScript in which objects are instantiated(<small>created and linked</small>).  Objects in JavaScript do not stand on their own, they are interlinked.</p>
+<p>By now you may have heard the news, EcmaScript(ES) 6 2015 is finalized and JavaScript is going to be propelled into future, satisfying the needs of non-JavaScript developers to easily transition to a language that didn't have <em>"classes"</em>.  Well, I'm not here to burst your bubble, but that's not happening.  What <em>IS</em> happening, is that we are getting nothing more than <strong>syntactic sugar over JavaScript prototypal delegation.</strong></p>
+<br>
+<p>Just to be 100% clear, "class oriented" (<small>Java, C#, etc</small>) programming involves object creation through constructors.  It is best to think of traditional instantiation as <em>class instantiation</em> which contrasts JavaScript in which objects are instantiated(<small>created and linked</small>).  Objects in JavaScript do not stand on their own, they are interlinked.</p>
 <p>If you aren't already familiar with the traditional sense of classes and how developers have been butchering JavaScript to re-invent classes, don't worry, we'll cover it shortly.</p>
 <br>
 <div>
@@ -27,11 +28,13 @@
         <li>Polymoprhism</li>
     </ul>
     <p>These concepts should be familiar, but if they're not, here are some resources to help you brush up:</p>
-    <ul>
-        <li><a href="https://msdn.microsoft.com/en-us/library/dd460654.aspx">Object Oriented Programming - MSDN</a></li>
-        <li><a href="https://msdn.microsoft.com/en-us/library/dd460654.aspx#Inheritance">C# Inheritance - MSDN</a></li>
-        <li><a href="https://msdn.microsoft.com/en-us/library/dd460654.aspx#Overriding">C# Overriding - MSDN</a></li>
-    </ul>
+        <span><a href="https://msdn.microsoft.com/en-us/library/dd460654.aspx">Object Oriented Programming - MSDN</a></span>
+<br>
+        <a href="https://msdn.microsoft.com/en-us/library/dd460654.aspx#Inheritance">C# Inheritance - MSDN</a>
+<br>
+<a href="https://msdn.microsoft.com/en-us/library/dd460654.aspx#Overriding">C# Overriding - MSDN</a>
+    <br>
+<br>
     <p>I don't want to spend the entire post explaining what classes are in C#, that's best saved for MSDN and other resources.  I just wanted to give you a brief refresher if you forgot the details.</p>
 </div>
 <br>
@@ -60,7 +63,7 @@
 
     <br>
     <div class="text-center">
-        <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/fb913409-8f2b-4f32-849e-9be7013728d1_original.png"
+        <img class="postImage" src="http://techiejs.com/Content/img/PublicImages/30a0874f-fb61-44ee-81e2-ecf893f0ab7d_original.jpg"
         alt="ecmascript 6 logo" style="border:0"  width="700" height="100" text-align="center" />
     </div>
     <br>
