--- a/UnderstandingClassesInEcmaScript6.html
+++ b/UnderstandingClassesInEcmaScript6.html
@@ -46,8 +46,8 @@
         alt="never assume anything lol" style="border:0"  width="400" text-align="center" />
     </div>
     <br>
-    <p>It's not entirely your fault if you were mislead by the <code>new</code> and <code>instanceof</code> keywords, especially if you heard <strong>"JavaScript is getting classes in ES6!"</strong>.  These keywords, which are very similar to other language keywords referring to class instantiation, have a tendency to confuse novice JavaScript developers.</p>
-    <p>You can coerce a <em>design pattern</em> in JavaScript to <em>simulate</em> classes through <code>.prototype</code> delegation but at the 10,000 foot view, you are employing a design pattern, not some fundamental language feature. </p>
+    <p>It's not entirely your fault if you were mislead by the <code>new</code> and <code>instanceof</code> keywords, especially if you heard <strong>"JavaScript is getting classes in ES6!"</strong>.  These keywords, which are very similar to other language keywords referring to class instantiation, have a tendency to confuse newer JavaScript developers.</p>
+    <p>You can coerce a <em>design pattern</em> in JavaScript to <em>simulate</em> classes through <code>[[Prototype]]</code> delegation but at the 10,000 foot view, you are employing a design pattern, not some fundamental language feature. </p>
     </div>
     <br>
     <div>
